@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020170826"
-#define public MagickPackageReleaseDate "snapshot-20170826"
+#define public MagickPackageVersionAddendum ".020170827"
+#define public MagickPackageReleaseDate "snapshot-20170827"
